--- a/pagina/contacto.html
+++ b/pagina/contacto.html
@@ -101,31 +101,117 @@
         </div>
     </header>
     <section class="contacto">
-        <form class="formulario">
-            <h3 class="titulo-secundario">Complete sus datos:</h3>
-            <label for="nombre"> Nombre:</label>
-            <input type="text" placeholder="Ingrese su nombre" name="nombre" class="text"><br /><br />
-            <label for="apellido">Apellido:</label>
-            <input type="text" placeholder="Ingrese su Apellido" name="apellido" class="text"><br /><br />
-            <label for="email">Email:</label>
-            <input type="email" placeholder="Ingrese su email" name="email" class="text"><br /><br />
-            <input type="submit" value="enviar formulario" class="text">
-            <input type="reset" value="eliminar todo" class="text">
-            <input type="checkbox" value="1" class="text">Aceptar enviar mail:<br /><br />
-            <label for="ubicacion">Ingrese su ubicacion:</label>
-            <select name="ubicacion" id="" class="text">
-                <option value="CABA">Ciudad de Buenos Aires</option>
-                <option value="GBA">Gran Buenos Aires</option>
-                <option value="SUR">Sur de Buenos Aires</option>
-                <option value="NORTE">Norte de Buenos Aires</option>
-            </select></br></br>
-            <label for="mensaje">Dejenos sus comentarios:</label>
-            <textarea name="mensaje" id="" col="100" row="8" placeholder="Deje sus comentarios"
-                class="text"> </textarea>
+        <form class="row g-3">
+            <div class="col-md-4">
+                <label for="validationServer01" class="form-label">Nombre/s</label>
+                <input type="text" class="form-control is-valid" id="validationServer01" value="Miguel" required>
+                <div class="valid-feedback">
+                    Correcto!
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label for="validationServer02" class="form-label">Apellido</label>
+                <input type="text" class="form-control is-valid" id="validationServer02" value="Gomez" required>
+                <div class="valid-feedback">
+                    Correcto!
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label for="validationServerUsername" class="form-label">Nombre de Usuario</label>
+                <div class="input-group has-validation">
+                    <span class="input-group-text" id="inputGroupPrepend3">@</span>
+                    <input type="text" class="form-control is-invalid" id="validationServerUsername"
+                        aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
+                    <div id="validationServerUsernameFeedback" class="invalid-feedback">
+                        Por favor ingrese un nombre de Usuario.
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationServer03" class="form-label">Ciudad</label>
+                <input type="text" class="form-control is-invalid" id="validationServer03"
+                    aria-describedby="validationServer03Feedback" required>
+                <div id="validationServer03Feedback" class="invalid-feedback">
+                    Por favor ingrese una Ciudad.
+                </div>
+            </div>
+            <div class="col-md-3">
+                <label for="validationServer04" class="form-label">Provincia</label>
+                <select class="form-select is-invalid" id="validationServer04"
+                    aria-describedby="validationServer04Feedback" required>
+                    <option selected disabled value="">Elije una...</option>
+                    <option>...</option>
+                </select>
+                <div id="validationServer04Feedback" class="invalid-feedback">
+                    Por favor seleccione una Provincia correcta.
+                </div>
+            </div>
+            <div class="col-md-3">
+                <label for="validationServer05" class="form-label">Codigo Postal</label>
+                <input type="text" class="form-control is-invalid" id="validationServer05"
+                    aria-describedby="validationServer05Feedback" required>
+                <div id="validationServer05Feedback" class="invalid-feedback">
+                    Por favor ingrese un codigo postal correcto.
+                </div>
+            </div>
+            <div class="was-validated">
+                <div class="mb-3">
+                    <label for="validationTextarea" class="form-label">Dejenos sus comentarios</label>
+                    <textarea class="form-control is-invalid" id="validationTextarea"
+                        placeholder="Requiere ingresar su comentario" required></textarea>
+                    <div class="invalid-feedback">
+                        Por favor, ingrese aqui sus comentarios.
+                    </div>
+                </div>
+                <div class="form-check mb-3">
+                    <h4>Como conocio nuestros Productos?</h4>
+                </div>
+                <div class="form-check mb-3">
+                    <input type="radio" class="form-check-input" id="validationFormCheck3" name="radio-stacked"
+                        required>
+                    <label class="form-check-label" for="validationFormCheck3">Por Redes Sociales</label>
+                </div>
+                <div class="form-check mb-3">
+                    <input type="radio" class="form-check-input" id="validationFormCheck3" name="radio-stacked"
+                        required>
+                    <label class="form-check-label" for="validationFormCheck3">Mediante un Folleto</label>
+                </div>
+                <div class="form-check mb-3">
+                    <input type="radio" class="form-check-input" id="validationFormCheck3" name="radio-stacked"
+                        required>
+                    <label class="form-check-label" for="validationFormCheck3">Nos recomendo un cliente</label>
+                </div>
+                <div class="mb-3">
+                    <select class="form-select" required aria-label="select example">
+                        <option value="">Cual es su producto preferido?</option>
+                        <option value="1">Ensalada Primavera</option>
+                        <option value="2">Canelones de Verdura</option>
+                        <option value="3">Milanesas de Soja</option>
+                        <option value="3">Arrollado Vegetal</option>
+                        <option value="3">Viandas saludables</option>
+                        <option value="3">Hamburguesas veguis</option>
+                    </select>
+                    <div class="invalid-feedback">Aún no eligio un producto</div>
+                </div>
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                        <label class="form-check-label" for="invalidCheck">
+                            De acuerdo con terminos y condiciones
+                        </label>
+                        <div class="invalid-feedback">
+                            Tu debes acordar con terminos antes de enviar
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <button class="btn btn-primary" type="submit">Enviar Formulario</button>
+                </div>
+            </div>
         </form></br></br>
         <div style="text-align:center" class="mapa">
             <h3>Nuestra Ubicacion</h3>
-            <iframe 
+            <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3266.170502068204!2d-58.76324178541905!3d-35.05247608034565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bd1f0d3a8253f5%3A0x5a48547efa7015a6!2sRivadavia%20893%2C%20B1814BHQ%20Ca%C3%B1uelas%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1646856039927!5m2!1ses!2sar"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
@@ -168,7 +254,7 @@
                         <label>Siguenos en Google Plus</label>
                     </div>
                     <div class="row">
-                        <a href=https://ar.pinterest.com/login/> <img src="https://i.ibb.co/qnbNb77/pinterest.png"
+                        <a href=https://ar.pinterest.com/login /> <img src="https://i.ibb.co/qnbNb77/pinterest.png"
                             alt="pinterest" border="0"></a>
                         <label>Siguenos en Pinterest</label>
                     </div>
@@ -216,10 +302,10 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
 
 </html>
